# grid-fw

./: .Doxyfile.swp  .clang-format  .codespellrc  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  TOOLCHAIN.md  clipboard.c  d51_build.sh  d51_build_firmware.sh  docker_build.sh  docker_clean.sh  docker_start.sh  esp_build.sh  esp_build_firmware.sh  esp_burn_bootloader.sh  esp_burn_firmware.sh  esp_convert_uf2.sh  esp_debug.sh  esp_flash.sh  esp_kill_debug.sh  esp_monitor.sh  format.sh  fuzz.sh  grid_led_BAK.c  grid_led_BAK.h  gui_build.sh  gui_server.py  gui_start.sh  help.sh  host_fuzz.sh  host_test.sh  ignore-words.txt  lua_build.sh  maxtouch.c  merged_stream.sh  patch_esp_efuse_startup.sh  patch_esp_spi_flash_hpm.sh  (+9 more)
.archive/: Dockerfile  Doxyfile
.devcontainer/: devcontainer.json
Docu/: FirmwareFlow.drawio  nvm_user_page.ods
Documentation/: FW_state_diagram  FW_state_diagram.drawio  FirmwareFlow.drawio  WebDebugger.drawio  actionstring_crud  actionstring_crud.drawio  luaLS_protocol_parsing_260305_prompt.md  nvic_priorities  nvic_priorities.drawio  nvm_defrag.drawio
automated_testing/: 0.1.red.json  0.2.red.json  0.3.red.json  TestNew.json  kuki getter.json  kuki setter.json  lila.json  testred.json
bb_captouch-1.3.1/: library.properties
binary/: grid_interface_hardware_test.uf2  grid_nightly.uf2  grid_nvm_hardware_test.uf2  grid_release.uf2  grid_toplevel_release.uf2  update-bootloader-intech_grid-v5.0.0.uf2
build_scripts/: debug.sh  ftdi.cfg  nightly.sh  openocd.cfg  openocd_full_install.cfg
common/: .gitignore
d51n20a/: .gitignore  AtmelStart.env_conf  AtmelStart.gpdsc  atmel_start.c  atmel_start.h  driver_init.c  grid_d51n20a.c  main.c  stdio_start.h  usb_start.c
esp32s3/: .gitignore  CMakeLists.txt  sdkconfig
esp32s3/components/grid_common/: CMakeLists.txt  idf_component.yml  linker_fragment.lf
expr_demo/: expr_10.c  expr_5_almost.c  expr_6_almost.c  expr_7_final.c  expr_8_final  expr_9_final  expr_demo  expr_demo_2.c  expr_demo_3.c  expr_demo_4.c
grid_common/: CMakeLists.txt  grid-fw  grid_ain.c  grid_ain.h  grid_allocator.c  grid_allocator.h  grid_asc.c  grid_asc.h  grid_buf.c  grid_buf.h  grid_cal.c  grid_cal.h  grid_config.c  grid_config.h  grid_decode.c  grid_decode.h  grid_led.c  grid_led.h  grid_littlefs.c  grid_littlefs.h  grid_lua.c  grid_lua.h  grid_lua_api.c  grid_lua_api.h  grid_math.c  grid_math.h  grid_module.c  grid_module.h  grid_msg.c  grid_msg.h  grid_noflash.c  grid_platform.c  grid_platform.h  grid_port.c  grid_port.h  grid_protocol.c  grid_protocol.h  grid_rollid.c  grid_rollid.h  grid_swsr.c  (+25 more)
grid_common/host_test/: CMakeLists.txt  main.c
grid_common/include/: grid_led.h  grid_lua_api.h  grid_protocol.h  grid_ui.h
grid_common/littlefs/: lfs.c  lfs_util.c
grid_common/lua-5.4.3/src/: dirent.c  lauxlib.c  loadlib.c  loslib.c
grid_common/lua_src/: .gitignore  autovalue.lua  decode.lua  elementname.lua  eventfname.lua  glut.lua  limit.lua  lookup.lua  lua_source_collection.h  mapsat.lua  my_library.lua  mylibrary.lua  segmentcalc.lua  sign.lua  simplecolor.lua  simplemidi.lua  timer.lua  toml.lua
grid_common/proto/: proto.h
grid_common/tinyalloc/: tinyalloc.c
grid_common/tomlc99/: toml.c  toml.h
grid_esp/: .gitignore  CMakeLists.txt  burn_bootloader.sh  burn_firmware.sh  monitor.sh  partitions-8MB.csv  pico_header.sh  sdkconfig  sdkconfig.old  trace_patch.sh  uf2convert.sh  upload.sh  upload_pico_firmware.sh
grid_esp/components/app_trace/: CMakeLists.txt  app_trace.c
grid_esp/components/app_trace/port/: port_uart.c
grid_esp/components/app_trace/port/xtensa/: port.c
grid_esp/components/app_trace/sys_view/Sample/FreeRTOSV10.4/: SEGGER_SYSVIEW_FreeRTOS.h
grid_esp/components/app_trace/sys_view/esp/: SEGGER_RTT_esp.c
grid_esp/components/grid_common/: CMakeLists.txt  linker_fragment.lf
grid_esp/components/grid_esp32_lcd/: CMakeLists.txt  HOW_TO_CREATE_FONT.md  blit32.h  convert_font.sh  grid_esp32_lcd.c  grid_esp32_lcd.h  grid_font.c  grid_font.h  grid_gui.c  grid_gui.h  grid_gui.old.h  grid_lua_api_gui.c  grid_lua_api_gui.h  inter_font.c  remove_non_ascii.sh  remove_non_ascii_glyphs.py  spacemono_font.c  stb_truetype.h  ubuntu_font.c
grid_esp/components/grid_esp32_lcd/generated_fonts/: interdisplay_regular.c  spacemono_bold.c  spacemono_regular.c
grid_esp/components/grid_esp32_usb/: CMakeLists.txt  grid_esp32_usb.c  grid_esp32_usb.h  grid_esp32_usb_acm.c  grid_esp32_usb_acm.h  grid_esp32_usb_cdc.c  grid_esp32_usb_cdc.h  grid_esp32_usb_hid.c  grid_esp32_usb_hid.h  grid_esp32_usb_midi.c  grid_esp32_usb_midi.h  grid_esp32_usb_ncm.c  grid_esp32_usb_ncm.h
grid_esp/main/: .gitignore  CMakeLists.txt  grid_esp32.c  grid_esp32.h  grid_esp32_adc.c  grid_esp32_adc.h  grid_esp32_encoder.c  grid_esp32_encoder.h  grid_esp32_led.c  grid_esp32_led.h  grid_esp32_module_bu16.c  grid_esp32_module_bu16.h  grid_esp32_module_ef44.c  grid_esp32_module_ef44.h  grid_esp32_module_en16.c  grid_esp32_module_en16.h  grid_esp32_module_pbf4.c  grid_esp32_module_pbf4.h  grid_esp32_module_po16.c  grid_esp32_module_po16.h  grid_esp32_module_tek2.c  grid_esp32_module_tek2.h  grid_esp32_nvm.c  grid_esp32_nvm.h  grid_esp32_pins.h  grid_esp32_port.c  grid_esp32_port.h  grid_esp32_swd.c  grid_esp32_swd.h  grid_esp32_usb.c  grid_esp32_usb.h  grid_fw.c  idf_component.yml  led_driver.c  led_strip_encoder.h  pico_firmware.h
grid_esp/main/ulp/: main.c
grid_gui/: CMakeLists.txt  browsersync_start.sh  build.sh  index.html  index.js  index.wasm  main.c  shell_minimal.html
grid_lib/: grid_ain.c  grid_buf.c  grid_buf.h  grid_com.c  grid_com.h  grid_led.c  grid_led.h  grid_protocol.h  grid_sys.c  grid_sys.h  grid_tel.c  grid_tel.h
grid_pico/main/: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  grid_pico_pins.h  grid_pico_platform.c  grid_pico_platform.h  grid_pico_spi.c  grid_pico_spi.h  main.c  main.elf.map  pico_pool.c  pico_pool.h  uart_rx.pio  uart_rx.pio.h  uart_tx.c
grid_pico/main/vmp/: vmp_def.h
rp2040/main/: CMakeLists.txt  main.c
wasm/: .gitignore  CMakeLists.txt  main.c  platform.c
(+2093 files in other folders)
