cmake_minimum_required(VERSION 3.10)

idf_component_register(
    SRCS
        "grid_protocol.c"
        "grid_config.c"
        "grid_cal.c"
        "grid_ain.c"
        "grid_asc.c"
        "grid_led.c"
        "grid_math.c"
        "grid_sys.c"
        "grid_swsr.c"
        "grid_msg.c"
        "grid_buf.c"
        "grid_decode.c"
        "grid_port.c"
        "grid_usb.c"
        "grid_ui.c"
        "grid_ui_button.c"
        "grid_ui_encoder.c"
        "grid_ui_endless.c"
        "grid_ui_potmeter.c"
        "grid_ui_system.c"
        "grid_ui_lcd.c"
        "grid_module.c"
        "grid_lua_api.c"
        "grid_lua.c"
        "grid_transport.c"
        "grid_rollid.c"
        "grid_utask.c"

        "lua-5.4.3/src/lapi.c"
        "lua-5.4.3/src/lauxlib.c"
        "lua-5.4.3/src/lbaselib.c"
        "lua-5.4.3/src/lcode.c"
        "lua-5.4.3/src/lcorolib.c"
        "lua-5.4.3/src/lctype.c"
        "lua-5.4.3/src/ldblib.c"
        "lua-5.4.3/src/ldebug.c"
        "lua-5.4.3/src/ldo.c"
        "lua-5.4.3/src/ldump.c"
        "lua-5.4.3/src/lfunc.c"
        "lua-5.4.3/src/lgc.c"
        "lua-5.4.3/src/linit.c"
        "lua-5.4.3/src/liolib.c"
        "lua-5.4.3/src/llex.c"
        "lua-5.4.3/src/lmathlib.c"
        "lua-5.4.3/src/lmem.c"
        "lua-5.4.3/src/loadlib.c"
        "lua-5.4.3/src/lobject.c"
        "lua-5.4.3/src/lopcodes.c"
        "lua-5.4.3/src/loslib.c"
        "lua-5.4.3/src/lparser.c"
        "lua-5.4.3/src/lstate.c"
        "lua-5.4.3/src/lstring.c"
        "lua-5.4.3/src/lstrlib.c"
        "lua-5.4.3/src/ltable.c"
        "lua-5.4.3/src/ltablib.c"
        "lua-5.4.3/src/ltm.c"
        "lua-5.4.3/src/lundump.c"
        "lua-5.4.3/src/lutf8lib.c"
        "lua-5.4.3/src/lvm.c"
        "lua-5.4.3/src/lzio.c"

        "tomlc99/toml.c"

    INCLUDE_DIRS
        "."
	    "lua-5.4.3/src"
)
