idf_component_register(

    LDFRAGMENTS
        "linker_fragment.lf"

    SRCS
        "../../../grid_common/grid_protocol.c"
        "../../../grid_common/grid_config.c"
        "../../../grid_common/grid_cal.c"
        "../../../grid_common/grid_ain.c"
        "../../../grid_common/grid_asc.c"
        "../../../grid_common/grid_led.c"
        "../../../grid_common/grid_math.c"
        "../../../grid_common/grid_sys.c"
        "../../../grid_common/grid_swsr.c"
        "../../../grid_common/grid_allocator.c"
        "../../../grid_common/grid_msg.c"
        "../../../grid_common/grid_noflash.c"
        "../../../grid_common/grid_buf.c"
        "../../../grid_common/grid_decode.c"
        "../../../grid_common/grid_port.c"
        "../../../grid_common/grid_usb.c"
        "../../../grid_common/grid_ui.c"
        "../../../grid_common/grid_ui_button.c"
        "../../../grid_common/grid_ui_encoder.c"
        "../../../grid_common/grid_ui_endless.c"
        "../../../grid_common/grid_ui_potmeter.c"
        "../../../grid_common/grid_ui_system.c"
        "../../../grid_common/grid_ui_lcd.c"
        "../../../grid_common/grid_module.c"
        "../../../grid_common/grid_lua.c"
        "../../../grid_common/grid_lua_api.c"
        "../../../grid_common/grid_transport.c"
        "../../../grid_common/grid_rollid.c"
        "../../../grid_common/grid_utask.c"

        "../../../grid_common/lua-5.4.3/src/lapi.c"
        "../../../grid_common/lua-5.4.3/src/lctype.c"
        "../../../grid_common/lua-5.4.3/src/lfunc.c"
        "../../../grid_common/lua-5.4.3/src/lmathlib.c"
        "../../../grid_common/lua-5.4.3/src/loslib.c"
        "../../../grid_common/lua-5.4.3/src/ltable.c"
        "../../../grid_common/lua-5.4.3/src/lundump.c"
        "../../../grid_common/lua-5.4.3/src/lauxlib.c"
        "../../../grid_common/lua-5.4.3/src/ldblib.c"
        "../../../grid_common/lua-5.4.3/src/lgc.c"
        "../../../grid_common/lua-5.4.3/src/lmem.c"
        "../../../grid_common/lua-5.4.3/src/lparser.c"
        "../../../grid_common/lua-5.4.3/src/ltablib.c"
        "../../../grid_common/lua-5.4.3/src/lutf8lib.c"
        "../../../grid_common/lua-5.4.3/src/lbaselib.c"
        "../../../grid_common/lua-5.4.3/src/ldebug.c"
        "../../../grid_common/lua-5.4.3/src/linit.c"
        "../../../grid_common/lua-5.4.3/src/loadlib.c"
        "../../../grid_common/lua-5.4.3/src/lstate.c"
        "../../../grid_common/lua-5.4.3/src/ltm.c"
        "../../../grid_common/lua-5.4.3/src/lvm.c"
        "../../../grid_common/lua-5.4.3/src/lcode.c"
        "../../../grid_common/lua-5.4.3/src/ldo.c"
        "../../../grid_common/lua-5.4.3/src/liolib.c"
        "../../../grid_common/lua-5.4.3/src/lobject.c"
        "../../../grid_common/lua-5.4.3/src/lstring.c"
        "../../../grid_common/lua-5.4.3/src/lzio.c"
        "../../../grid_common/lua-5.4.3/src/llex.c"
        "../../../grid_common/lua-5.4.3/src/lopcodes.c"
        "../../../grid_common/lua-5.4.3/src/ldump.c"
        "../../../grid_common/lua-5.4.3/src/lstrlib.c"
        "../../../grid_common/lua-5.4.3/src/lcorolib.c"

        "../../../grid_common/tomlc99/toml.c"

    INCLUDE_DIRS
        "."
        "../../../grid_common"
        "../../../grid_common/lua-5.4.3/src"
)
